@@ -614,6 +614,7 @@ enum {
    P_STD_C89,
    P_STD_C99,
    P_STD_C11,
+   P_STD_C2X,
    P_STD_SDCC89,
    P_STD_SDCC99,
    P_CODESEG,
@@ -948,6 +949,7 @@ doPragma (int id, const char *name, const char *cp)
 
       options.std_c99 = 0;
       options.std_c11 = 0;
+      options.std_c2x = 0;
       options.std_sdcc = 0;
       break;
 
@@ -960,6 +962,8 @@ doPragma (int id, const char *name, const char *cp)
         }
 
       options.std_c99 = 1;
+      options.std_c11 = 0;
+      options.std_c2x = 0;
       options.std_sdcc = 0;
       break;
 
@@ -973,6 +977,21 @@ doPragma (int id, const char *name, const char *cp)
 
       options.std_c99 = 1;
       options.std_c11 = 1;
+      options.std_c2x = 0;
+      options.std_sdcc = 0;
+      break;
+
+    case P_STD_C2X:
+      cp = get_pragma_token(cp, &token);
+      if (TOKEN_EOL != token.type)
+        {
+          err = 1;
+          break;
+        }
+
+      options.std_c99 = 1;
+      options.std_c11 = 1;
+      options.std_c2x = 1;
       options.std_sdcc = 0;
       break;
 
@@ -986,6 +1005,7 @@ doPragma (int id, const char *name, const char *cp)
 
       options.std_c99 = 0;
       options.std_c11 = 0;
+      options.std_c2x = 0;
       options.std_sdcc = 1;
       break;
 
@@ -999,6 +1019,7 @@ doPragma (int id, const char *name, const char *cp)
 
       options.std_c99 = 1;
       options.std_c11 = 0;
+      options.std_c2x = 0;
       options.std_sdcc = 1;
       break;
 
@@ -1068,6 +1089,7 @@ static struct pragma_s pragma_tbl[] = {
   { "std_c89",           P_STD_C89,         0, doPragma },
   { "std_c99",           P_STD_C99,         0, doPragma },
   { "std_c11",           P_STD_C11,         0, doPragma },
+  { "std_c2x",           P_STD_C2X,         0, doPragma },
   { "std_sdcc89",        P_STD_SDCC89,      0, doPragma },
   { "std_sdcc99",        P_STD_SDCC99,      0, doPragma },
   { "codeseg",           P_CODESEG,         0, doPragma },
